2021-09-06  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-archive-groom.sh: Wait for initial scan and groom
	cycle.
	* run-debuginfod-archive-rename.sh: Likewise.
	* run-debuginfod-federation-sqlite.sh: Likewise.
	* run-debuginfod-archive-test.sh: Wait for initial scan cycle.
	* run-debuginfod-artifact-running.sh: Likewise.
	* run-debuginfod-dlopen.sh: Likewise.
	* run-debuginfod-extraction.sh: Likewise.
	* run-debuginfod-federation-link.sh: Likewise.
	* run-debuginfod-federation-metrics.sh: Likewise.
	* run-debuginfod-malformed.sh: Likewise.
	* run-debuginfod-regex.sh: Likewise.
	* run-debuginfod-tmp-home.sh: Likewise.
	* run-debuginfod-writable.sh: Likewise.

2021-09-06  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-archive-groom.sh: Set DEBUGINFOD_URLS after starting
	debuginfod server.
	* run-debuginfod-archive-rename.sh: Likewise.
	* run-debuginfod-federation-link.sh: Don't set DEBUGINFOD_URLS.
	* run-debuginfod-federation-sqlite.sh: Likewise.
	* run-debuginfod-federation-metrics.sh: Add comment why invalid
	DEBUGINFOD_URLS is set.

2021-09-06  Mark Wielaard  <mark@klomp.org>

	* debuginfod-subr.sh (err): Change ports to port in for loop so both
	PORT1 and PORT2 are used.
	(get_ports): Simplify port selection by using for 50 for PORT1 and
	second 50 for PORT2.

2021-09-06  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-file.sh: Set DEBUGINFOD_CACHE_PATH. Export
	correct DEBUGINFOD_URLS.
	* run-debuginfod-query-retry.sh: Add DEBUGINFOD_CACHE_PATH
	to env.

2021-09-03  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-000-permission.sh: Set DEBUGINFOD_CACHE_PATH
	and use an unique sqlite db.
	* run-debuginfod-archive-groom.sh: Likewise.
	* run-debuginfod-archive-test.sh: Likewise.
	* run-debuginfod-dlopen.sh: Likewise.
	* run-debuginfod-duplicate-urls.sh: Likewise.
	* run-debuginfod-extraction.sh: Likewise.
	* run-debuginfod-fd-prefetch-caches.sh: Likewise.
	* run-debuginfod-malformed.sh: Likewise.
	* run-debuginfod-sizetime.sh: Likewise.